39-secret-zero/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x09-secret-zero-svc
  labels:
    app: x09-secret-zero
spec:
  type: ClusterIP
  selector:
    app: x09-secret-zero
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
